--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Users</string>
     <string name="details">Details</string>
+    <string name="lastName">LastName</string>
+    <string name="email">Email</string>
 </resources>
