--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="details">Details</string>
     <string name="lastName">LastName</string>
     <string name="email">Email</string>
+    <string name="favorite_title">Favorite\n</string>
 </resources>
